<?xml version="1.0"?>
<package>
  <name>wm_color_detector</name>
  <version>0.0.1</version>
  <description>The wm_color_detector package</description>
  <maintainer email="lucas.maurice@outlook.com">Lucas Maurice</maintainer>
  <author email="lucas.maurice@outlook.com">Lucas Maurice</author>
  <license>APACHE</license>
  <url type="REPO">https://github.com/WalkingMachine/wm_color_detector</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export></export>
</package>
